tests/ui/derive_specifier/duplicate_derive_2.stderr
error: encountered duplicate `#[derive_const(Specifier)]` parameter
 --> tests/ui/derive_specifier/duplicate_derive_2.rs:4:31
  |
4 | #[derive_const(Specifier)] #[derive_const(Specifier)]
  |                               ^^^^^^^^^

error: previous `#[derive_const(Specifier)]` parameter here
 --> tests/ui/derive_specifier/duplicate_derive_2.rs:4:10
  |
4 | #[derive_const(Specifier)] #[derive_const(Specifier)]
  |          ^^^^^^^^^
